--- a/css/style.css
+++ b/css/style.css
@@ -47,3 +47,9 @@ body{
 .rounded-circle{
     max-width: 10%;
 }
+
+@media screen and (max-width: 400px){
+   .container-titulo{
+       padding: 50px;
+   } 
+}
