--- a/css/contact-style.css
+++ b/css/contact-style.css
@@ -47,3 +47,11 @@ body{
 .rounded-circle{
     max-width: 10%;
 }
+
+@media screen and (max-width: 480px){
+    .container-texto, .container-descricao, .container-titulo{
+        margin: 20px 20px;
+        flex-direction: row;
+        flex-wrap: wrap;
+    }
+ }
