--- a/css/style.css
+++ b/css/style.css
@@ -48,8 +48,10 @@ body{
     max-width: 10%;
 }
 
-@media screen and (max-width: 400px){
-   .container-titulo{
-       padding: 50px;
-   } 
+@media screen and (max-width: 480px){
+   .container-texto, .container-descricao, .container-titulo{
+       margin: 20px 20px;
+       flex-direction: row;
+       flex-wrap: wrap;
+   }
 }
