--- a/css/contact-style.css
+++ b/css/contact-style.css
@@ -51,7 +51,8 @@ body{
 @media screen and (max-width: 480px){
     .container-texto, .container-descricao, .container-titulo{
         margin: 20px 20px;
-        flex-direction: row;
-        flex-wrap: wrap;
+       flex-direction: row;
+       flex-wrap: wrap;
+       text-align: center;
     }
  }
