--- a/css/style.css
+++ b/css/style.css
@@ -50,8 +50,9 @@ body{
 
 @media screen and (max-width: 480px){
    .container-texto, .container-descricao, .container-titulo{
-       margin: 20px 20px;
+       margin: 30px 20px;
        flex-direction: row;
        flex-wrap: wrap;
+       padding: 10px 10px;
    }
 }
