--- a/css/style.css
+++ b/css/style.css
@@ -36,13 +36,11 @@ body{
     margin: 10% 20% 10% 20%;
     padding: 100px;
     border-radius: 20px;
-}
-.container-descricao{
-    margin: 0 20px 0 20px;
+    box-shadow: 0 5px 10px #cccc;
 }
 .bg-footer{
     background-color: var(--cor-laranja);
-    padding: 2em;
+    padding: 1cm;
 }
 .rounded-circle{
     max-width: 10%;
@@ -51,8 +49,6 @@ body{
 @media screen and (max-width: 480px){
    .container-texto, .container-descricao, .container-titulo{
        margin: 30px 20px;
-       flex-direction: row;
-       flex-wrap: wrap;
        padding: 10px 10px;
    }
 }
