--- a/css/curso-style.css
+++ b/css/curso-style.css
@@ -41,8 +41,8 @@ body{
 }
 .accordion{
     width: 100%;
-    display: flex;
-    align-items: baseline;
+    display:flex;
+    align-items:baseline;
 }
 .card-img-top{
     display: block;
@@ -59,13 +59,18 @@ body{
     max-width: 10%;
 }
 
-@media screen and (max-width: 1200px){
+@media screen and (max-width: 1130px){
     .container-texto, .container-cursos, .container-titulo{
-        margin: 30px auto;
+        margin: 50px 20px;
         padding: 10px 10px 50px 10px;
+        max-width: 900px;
     }
     .accordion{
         display: grid;
+        flex-direction: column;
+        align-items:center;
+        padding: 20px;
+        
     }
     .card{
         display: block;
